<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="damson.suites.suites.ThreeButtonsActivity"
    android:background="#252d3d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddItem"
                android:id="@+id/Item_Label"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Item_Text"
                android:layout_weight="1"
                android:editable="true"
                android:inputType="text"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddQuantity"
                android:id="@+id/Quantity_Label"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Quantity_Text"
                android:layout_gravity="center_horizontal"
                android:editable="true"
                android:inputType="number|text"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddprice"
                android:id="@+id/Price_Label"
                android:textColor="#FFFFFF" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Price_Text"
                android:layout_weight="1"
                android:editable="true"
                android:inputType="numberDecimal"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|fill_vertical|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceryBasketEdit"
                android:id="@+id/Edit_Button"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/groceryBasketDelete"
                android:id="@+id/Delete_Button"
                android:background="#FFFFFF"
                android:textColor="#000000" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceryBasketAddCancel"
                android:id="@+id/Cancel_Button"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
