<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="damson.suites.suites.GroceryBasketAdd"
    tools:showIn="@layout/activity_grocery_basket_add"
    android:background="#252d3d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#252d3d"
        android:gravity="center_horizontal|clip_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddItem"
                android:id="@+id/grocery_basket_add_item_label"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/grocery_basket_add_item_text"
                android:layout_weight="1"
                android:inputType="text"
                android:editable="true"
                android:drawableTint="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddQuantity"
                android:id="@+id/grocery_basket_add_quantity_label"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/grocery_basket_add_quantity_text"
                android:layout_weight="1"
                android:inputType="number"
                android:editable="true"
                android:drawableTint="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/groceryBasketAddprice"
                android:id="@+id/grocery_basket_add_price_label"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/grocery_basket_add_price_text"
                android:inputType="numberDecimal"
                android:editable="true"
                android:elegantTextHeight="false"
                android:drawableTint="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add"
                android:id="@+id/grocery_basket_add_add_button"
                android:onClick="addItem"
                android:textColor="#000000"
                android:background="#FFFFFF"
                android:layout_marginLeft="80dp" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceryBasketAddCancel"
                android:id="@+id/grocery_basket_add_cancel_button"
                android:onClick="Cancel"
                android:textColor="#000000"
                android:background="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
